li overflow fix

--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ ul {
     column-count: 3;
 }
 
+li{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 li::before {
     content: url('./img/util/selo.svg');
     display: inline-block;
